# stltostp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  StepKernel.cpp  StepKernel.h  main.cpp
.gitignore/: .gitignore
install/: stltostp-1.0.0-win64.msi
test/: bucket.stl  cat_dish.stl  cat_dish_bin.stl  single_tri.stl
